// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sprite reports should report the verdict on the icon grid 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "sprite",
    "verify-equipment",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "findings": [],
    "status": "passed",
    "subject": "<resources>/gamedata/configs/system.ltx",
  },
}
`;

exports[`sprite reports should report what packing the icons produced 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "sprite",
    "pack-equipment",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "duration": "<duration>",
    "outcome": "completed",
    "packedCount": 4,
    "savedAt": "<sandbox>/repacked.dds",
    "savedHeight": 52,
    "savedWidth": 152,
    "skippedCount": 0,
  },
}
`;

exports[`sprite reports should report what slicing the sprite produced 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "sprite",
    "unpack-equipment",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "declaredMipmapLevels": null,
    "destination": "<sandbox>/icons",
    "format": "DXT5",
    "height": 64,
    "source": "<resources>/gamedata/textures/ui/ui_test_sheet.dds",
    "systemLtx": "<resources>/gamedata/configs/system.ltx",
    "width": 256,
  },
}
`;
